...
        const <dynamic>[];

    if (source.isEmpty) {
      return <Map<String, dynamic>>[
        {
          'dayNumber': 1,
          'dayName': 'Monday',
          'meals': <Map<String, dynamic>>[],
        }
      ];
    }

    return source.asMap().entries.map((entry) {
...
